--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,15 @@ img {
   max-width: 100%;
 }
 
+input {
+  font-family: inherit;
+}
+
+button {
+  font-family: inherit;
+  color: currentColor;
+}
+
 .container {
   width: 1158px;
   padding-left: 15px;
@@ -592,6 +601,10 @@ img {
   color: #f4f4fd;
 }
 
+.footer-social {
+  margin-right: 80px;
+}
+
 .footer-social-text {
   margin-bottom: 16px;
   font-weight: 500;
@@ -631,4 +644,55 @@ img {
 
 .footer-social-icon {
   fill: #f4f4fd;
+}
+
+.footer-form {
+  display: flex;
+  align-items: flex-end;
+}
+
+.footer-label {
+  display: flex;
+  flex-direction: column;
+
+  margin-right: 24px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+
+  color: #ffffff;
+}
+
+.footer-input {
+  width: 264px;
+  margin-top: 16px;
+  padding: 8px 16px;
+
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.48px;
+  color: #ffffff;
+
+  background-color: transparent;
+}
+
+.footer-input::placeholder {
+  color: inherit;
+}
+
+.footer-btn {
+  padding: 8px 24px;
+  border-radius: 4px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+
+  color: #ffffff;
+  background: #4d5ae5;
 }
