--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
   box-sizing: border-box;
 }
 
@@ -651,11 +651,13 @@ button {
   align-items: flex-end;
 }
 
-.footer-label {
-  display: flex;
-  flex-direction: column;
-
+.footer-form-container {
   margin-right: 24px;
+}
+
+.footer-label {
+  display: block;
+  margin-bottom: 16px;
 
   font-weight: 500;
   line-height: 1.5;
@@ -666,7 +668,6 @@ button {
 
 .footer-input {
   width: 264px;
-  margin-top: 16px;
   padding: 8px 16px;
 
   border-radius: 4px;
@@ -695,4 +696,262 @@ button {
 
   color: #ffffff;
   background: #4d5ae5;
+
+  cursor: pointer;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+  background-color: #404bbf;
+}
+
+/* ===== backdrop ===== */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+/* ===== modal ===== */
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+
+  border-radius: 4px;
+  padding: 72px 24px 24px 24px;
+
+  background: #fcfcfc;
+}
+
+.btn-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  line-height: 0;
+
+  background-color: #e7e9fc;
+
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close:hover,
+.btn-close:focus {
+  background-color: #404bbf;
+}
+
+.btn-close .icon-close {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close:hover .icon-close,
+.btn-close:focus .icon-close {
+  fill: #ffffff;
+}
+
+.form-discription {
+  margin-bottom: 16px;
+
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+
+  color: #2e2f42;
+}
+
+.form-modal {
+  width: 100%;
+}
+
+.form-modal-container {
+  margin-bottom: 8px;
+}
+.form-modal-container.comment {
+  margin-bottom: 16px;
+}
+
+.form-input-container {
+  position: relative;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+
+  color: #8e8f99;
+}
+
+.form-input {
+  padding-left: 38px;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+
+  fill: rgba(46, 47, 66, 1);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment {
+  padding: 8px 16px;
+  width: 360px;
+  height: 120px;
+  resize: none;
+
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+  color: rgba(46, 47, 66, 0.4);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.form-input:focus,
+.form-comment:focus {
+  border-color: #4d5ae5;
+  outline-color: transparent;
+  outline-offset: 4px;
+}
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
+}
+
+.form-accept {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+
+  margin-bottom: 24px;
+}
+
+.form-accept-label {
+  color: #8e8f99;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+}
+
+.form-accept-checkbox-area {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
+
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+
+  cursor: pointer;
+
+  fill: transparent;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-accept-checkbox:checked + .form-accept-label .form-accept-checkbox-area {
+  background-color: #404bbf;
+  fill: #f4f4fd;
+}
+
+.form-accept-checkbox:focus + .form-accept-label .form-accept-checkbox-area {
+  border: 1px solid #4d5ae5;
+}
+
+.form-accept-label .privacy-policy {
+  color: #4d5ae5;
+
+  text-decoration-line: underline;
+}
+
+.form-btn-send {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px 32px;
+  width: 169px;
+  border: none;
+
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+
+  cursor: pointer;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn-send:hover,
+.form-btn-send:focus {
+  background-color: #404bbf;
 }
