--- a/css/styles.css
+++ b/css/styles.css
@@ -687,7 +687,11 @@ button {
 }
 
 .footer-btn {
+  display: inline-flex;
+  justify-content: space-between;
+  width: 165px;
   padding: 8px 24px;
+  border: none;
   border-radius: 4px;
 
   font-weight: 500;
@@ -705,6 +709,14 @@ button {
 .footer-btn:hover,
 .footer-btn:focus {
   background-color: #404bbf;
+}
+
+.footer-btn-container {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  fill: #ffffff;
 }
 
 /* ===== backdrop ===== */
