--- a/css/styles.css
+++ b/css/styles.css
@@ -790,9 +790,9 @@ button {
 }
 
 .btn-close .icon-close {
-  /* position: absolute;
+  position: absolute;
   top: 50%;
-  left: 50%; */
+  left: 50%;
   transform: translate(-50%, -50%);
 
   fill: #2e2f42;
