--- a/css/styles.css
+++ b/css/styles.css
@@ -790,10 +790,10 @@ button {
 }
 
 .btn-close .icon-close {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
 
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
